// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing customerReducer When event is CREATE_CUSTOMER, it should add the new customer to list  1`] = `
Array [
  Object {
    "DOB": "11/03/1950",
    "firstName": "Ross",
    "id": 1,
    "lastName": "Geller",
  },
  Object {
    "DOB": "01/06/1955",
    "firstName": "Rachel",
    "id": 2,
    "lastName": "Green",
  },
  Object {
    "DOB": "3/5/1977",
    "firstName": "John",
    "id": 3,
    "lastName": "Doe",
  },
]
`;

exports[`Testing customerReducer When event is DELETE_CUSTOMER, it should delete the item from the list 1`] = `
Array [
  Object {
    "DOB": "01/06/1955",
    "firstName": "Rachel",
    "id": 2,
    "lastName": "Green",
  },
]
`;

exports[`Testing customerReducer When event is EDIT_CUSTOMER, it should delete the item from the list 1`] = `
Array [
  Object {
    "DOB": "5/7/1967",
    "firstName": "Tom",
    "id": 1,
    "lastName": "Cruz",
  },
  Object {
    "DOB": "01/06/1955",
    "firstName": "Rachel",
    "id": 2,
    "lastName": "Green",
  },
]
`;
